--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is My Website.</h1>
+    <h1 style='color:blue'>This is My Website.</h1>
     <h2>Hello</h2>
     <div>Hello World!</div>
 </body>
